<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MainActivity">
<android.support.constraint.ConstraintLayout
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_top"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="JOBS"
            android:textStyle="bold"
            android:textSize="25dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center" />

    </android.support.v7.widget.Toolbar>

    <SearchView
        android:id="@+id/sv_search_jobs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:queryHint="@string/search_query_hint"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_rounded_search_view"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/linera_layout_pager"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_top" />
<android.support.constraint.ConstraintLayout
    android:id="@+id/hidden_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/sv_search_jobs"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">
<android.support.v7.widget.RecyclerView
    android:id="@+id/rv_hidden_search"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:nestedScrollingEnabled="true"
    android:paddingBottom="120dp"
    app:layout_constrainedHeight="true"
    app:layout_constraintTop_toTopOf="@+id/hidden_constraint_layout"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/iv_no_search_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_empty"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="@+id/hidden_constraint_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone">
</ImageView>

    <TextView
        android:id="@+id/tv_no_search_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/no_search_results"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_no_search_results"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_no_search_results_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_search_results_explain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_no_search_results"
        android:visibility="gone"
        />
</android.support.constraint.ConstraintLayout>
    <LinearLayout
        android:id="@+id/linera_layout_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/sv_search_jobs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
    <android.support.design.widget.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        app:tabTextColor="@color/colorThree"
        app:tabSelectedTextColor="@color/colorOne"
        android:layout_height="wrap_content"
        app:tabIndicatorColor="@color/colorOne"
        app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
        >

    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>